Move away from the term "private"
- Changed documentation and references in a refractor to change the term "private" to "user" when referring to uploading lists to the application
- This was done to remove the security-context of private lists to a more general term and highlight the risks of using the file upload feature.

--- a/config/config.json
+++ b/config/config.json
@@ -21,5 +21,5 @@
     "generate-wordlist":true,
     "generate-rules":true,
     "generate-masks":true,
-    "allow-private-lists":true
+    "allow-user-lists":true
 }
